# Quark

./: .gitignore  CMakeLists.txt
include/: EngineCompress.h  conversions.h  utils.h
src/: EngineCompress.cpp  main.cpp  utils.cpp
